<resources>
    <string name="app_name">Pixabay Tag and Label</string>
    <string name="action_about">About</string>
    <string name="about_pixabay_sampler">About the Pixabay Tag and Label</string>
    <string name="pixabay_logo">Pixabay Logo</string>
    <string name="created_by">Created by:</string>
    <string name="credits">Credits:</string>
    <string name="authorImg">Image of a castle</string>
    <string name="itec_4550_2018">ITEC 4550, Spring 2018</string>
    <string name="author_image_general_grizzly">this is the author\'s image</string>
    <string name="pixabay_tag_na"><b>Pixabay Tags:</b> n/a</string>
    <string name="cloud_vision_labels_na"><b>Cloud Vision Labels:</b> n/a</string>
    <string name="pixabay_tags"><b>Pixabay Tags:</b> %s</string>
    <string name="cloud_vision_labels"><b>Cloud Vision Labels:</b> %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="show_pixabay_tags">Show Tags</string>
    <string name="cloud_vision_labels_noformat">Show Labels</string>
    <string name="authorNames">Jacob Piazza, Jessica Sok, Afeefa Firdaus</string>\
    <string name="appDesc">This app retrieve images from pixabay and labels Google’s Cloud Vision API service.</string>

    <string name="threshold">Omit if below</string>
    <string name="show_probabilities">Show Probabilities</string>
    <string name="spoken_pixabay_tags">Speak Tags</string>
    <string-array name="pref_threshold_titles">
        <item>90 Percent</item>
        <item>80 Percent</item>
        <item>70 Percent</item>
        <item>60 Percent</item>
        <item>50 Percent</item>
        <item>40 Percent</item>
        <item>30 Percent</item>
        <item>20 Percent</item>
        <item>10 Percent</item>
        <item>0 Percent</item>
    </string-array>

    <string-array name="pref_threshold_values">
        <item>0.90</item>
        <item>0.80</item>
        <item>0.70</item>
        <item>0.60</item>
        <item>0.50</item>
        <item>0.40</item>
        <item>0.30</item>
        <item>0.20</item>
        <item>0.10</item>
        <item>0.0</item>
    </string-array>
    <string name="title_activity_settings_f">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
