<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Pixabay">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pixabay_tags"
            android:title="@string/show_pixabay_tags" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="tts_sound"
            android:title="@string/spoken_pixabay_tags" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Google Cloud Vision">
        <SwitchPreference
            android:defaultValue="true"
            android:key="cloud_vision_labels"
            android:title="@string/cloud_vision_labels_noformat" />
        <ListPreference
            android:defaultValue="70"
            android:entries="@array/pref_threshold_titles"
            android:entryValues="@array/pref_threshold_values"
            android:key="threshold"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="70 percent"
            android:title="@string/threshold" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_probabilities"
            android:title="@string/show_probabilities" />

    </PreferenceCategory>

</PreferenceScreen>
